--- a/Holoholona/Views/Home/Index.cshtml
+++ b/Holoholona/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
 <script>
     var data = (function ($) { 
-        var getDog = (function() {
+        var getData = (function() {
             $.ajax({
                 method: "GET",
                 url: "GetMammals",
@@ -23,7 +23,7 @@
         }
 
         return {
-            getDog: getDog
+            getData: getData
         }
     })(jQuery);
 </script>
@@ -37,7 +37,7 @@
 <body>
     <div>
         <script>
-            data.getDog();
+            data.getData();
         </script>
     </div>
 </body>
