Fix 404 error when calling GetMammals, incorrect route

--- a/Holoholona/Views/Home/Index.cshtml
+++ b/Holoholona/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         var getData = (function() {
             $.ajax({
                 method: "GET",
-                url: "GetMammals",
+                url: "@Url.Action("GetMammals", "Home")",
                 dataType: "json",
                 success: function (response) {
                     print(response);
