Huge commit: Created two seperate projects to contain "no-web" logic. Entities and Service. Some refactoring is needed. Removed repository pattern and exchanged it with the factory pattern in services. Made Animal nonabstract temporarily, till we agree on the structure and make more subclasses of Animal etc.

--- a/Holoholona/Views/Home/Index.cshtml
+++ b/Holoholona/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         var getData = (function() {
             $.ajax({
                 method: "GET",
-                url: "@Url.Action("GetMammals", "Home")",
+                url: "@Url.Action("GetAnimals", "Home")",
                 dataType: "json",
                 success: function (response) {
                     print(response);
